# neversink-filter-downloader

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  appveyor.yml  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  rust-build.yml
src/: lib.rs  main.rs
src/lib/: mod.rs
