[package]
name = "neversink-filter-downloader"
version = "0.4.4"
authors = ["Dennis Hedegaard <dennis@dhedegaard.dk>"]
build = "build.rs"
edition = '2021'

[dependencies]
chrono = "^0.4.39"
colored = "^2.1.0"
dirs = "^5.0.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.216"
serde_derive = "1.0.216"
serde_json = "1.0.133"
term-painter = "^0.4.0"
tokio = { version = "1.42.0", features = ["full"] }
zip = "^0.6.6"

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

[package.metadata.winres]
OriginalFilename = "neversink-filter-downloader.exe"
ProductName = "NeverSink Lootfilter Downloader"
LegalCopyright = "Copyright © 2021 Dennis Hedegaard"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
