[package]
name = "neversink-filter-downloader"
version = "0.4.6"
authors = ["Dennis Hedegaard <dennis@dhedegaard.dk>"]
build = "build.rs"
edition = '2021'

[dependencies]
chrono = "^0.4.39"
colored = "^3.0.0"
dirs = "^6.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
term-painter = "^0.4.0"
tokio = { version = "1.43.0", features = ["full"] }
zip = "^2.2.2"

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

[package.metadata.winres]
OriginalFilename = "neversink-filter-downloader.exe"
ProductName = "NeverSink Lootfilter Downloader"
LegalCopyright = "Copyright © 2021 Dennis Hedegaard"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
